# data_platform

./: LICENSE  Makefile  Makefile_dev.txt  README.md  docker-compose.yaml  push_images.sh
code_locations/basic_ml_pipeline/: pyproject.toml
code_locations/basic_ml_pipeline/config/: config.py
code_locations/basic_ml_pipeline/config/config/: config.prod.yaml
code_locations/basic_ml_pipeline/config/secrets/: secrets.dev.yaml
code_locations/basic_ml_pipeline/src/: __init__.py
code_locations/basic_ml_pipeline/src/asset_checks/: __init__.py  data_pipeline_checks.py
code_locations/basic_ml_pipeline/src/assets/: __init__.py  train_lr.py
code_locations/etl_pipeline/: pyproject.toml
code_locations/etl_pipeline/config/: config.py
code_locations/etl_pipeline/config/config/: config.dev.yaml  config.prod.yaml  config.uat.yaml
code_locations/etl_pipeline/src/: __init__.py
code_locations/etl_pipeline/src/asset_checks/: __init__.py  data_pipeline_checks.py
code_locations/etl_pipeline/src/assets/: __init__.py  assets_to_fail.py  crypto_to_duckdb.py  pull_clean_save.py  set_db_tables.py
code_locations/etl_pipeline/src/jobs/: __init__.py  etl_job.py  failing_job.py  streaming_ingest_job.py
code_locations/etl_pipeline/src/resources/: __init__.py
code_locations/etl_pipeline/src/sensors/: __init__.py  crypto_price_sensor.py
code_locations/shared/resources/: __init__.py  db_client_resource.py
deployment/: dagster.yaml  docker-compose.yaml  workspace.yaml
deployment/dockerfiles/: daemon.dockerfile  duckdb_io_manager.dockerfile  etl_pipeline.dockerfile  kafka_producer.dockerfile  ml_pipeline.dockerfile  spark_consumer.dockerfile  webserver.dockerfile
docs/: ARCHITECTURE.md
kafka_producer/: producer.py
spark_consumer/: consumer.py  requirements.txt
(+3 files in other folders)
